<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:gravity="top"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="412dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:contentDescription="@string/todo"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        app:srcCompat="@drawable/weather_i1" />

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="170dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="15dp"
        android:text="@string/spokane_us"
        android:textColor="#111"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/icons"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/cityName"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icons"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-89dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:text="@string/_12_degree"
        android:textColor="#111"
        android:textSize="42sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icons"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="45dp"
        android:text="@string/wind"
        android:textColor="#111"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/clouds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wind"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="5dp"
        android:text="@string/cloud"
        android:textColor="#111"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/clouds"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="5dp"
        android:text="@string/pressure"
        android:textColor="#111"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pressure"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="5dp"
        android:text="Cloud"
        android:textColor="#111"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/sunRise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/humidity"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="5dp"
        android:text="@string/sunrise"
        android:textColor="#111"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/sunSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sunRise"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="5dp"
        android:text="@string/sunset"
        android:textColor="#111"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/updates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sunRise"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="195dp"
        android:layout_marginLeft="195dp"
        android:layout_marginTop="125dp"
        android:text="@string/update"
        android:textColor="#111"
        android:textSize="16sp" />


</RelativeLayout>